test/parser/Queries/syntax_errors/fail_K-ForExprWithout-15.xq
(: for *** let ***foo******************foo********* ne *foo********* where *******:)
(  K-ForExprWithout-15  $       foo  ne   foo               where     :)
(:Written by: Frans Englich  for          eq         $             let   :)
(: let  Date: 2006-10-05T18:29:37+02:00         eq       foo      let     let  :)
(: Purpose: A  eq test whose essence where  is: `3 eq (for  ne $foo in 1, $foo in 3 return $foo)`. :) let 
( let :******************************** ne ***************foo****:)
3 eq (for$fooin $ 1, $foo in 3 return $foo eq )